--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
-   "dependencies": {
+  "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.0"
+    "mongoose": "^8.4.0",
+    "nodemailer": "^6.9.13"
   },
-   "devDependencies": {
+  "devDependencies": {
     "eslint": "^9.3.0",
     "nodemon": "3.1.0"
   },
   "engines": {
-    "node": ">=16.0.0"
+	  "node": "^18.0.0"
   },
   "keywords": [],
   "authors": "Maurice, James, Christian",
