--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
@@ -13,6 +15,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -20,11 +23,13 @@
     "nodemailer": "^6.9.13"
   },
   "devDependencies": {
-    "eslint": "^9.3.0",
+    "@eslint/js": "^9.3.0",
+    "eslint": "^8.2.0",
+    "globals": "^15.3.0",
     "nodemon": "3.1.0"
   },
   "engines": {
-	  "node": "^18.0.0"
+    "node": "^18.0.0"
   },
   "keywords": [],
   "authors": "Maurice, James, Christian",
