--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -23,8 +22,9 @@
     "nodemailer": "^6.9.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.3.0",
     "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.1",
+    "eslint-plugin-import": "^2.23.4",
     "globals": "^15.3.0",
     "nodemon": "3.1.0"
   },
